--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,8 @@ img {
   letter-spacing: 0.02em;
   word-wrap: break-word;
   padding: 24px 0;
+  transition-duration: var(--tr-drn);
+  transition-timing-function: var(--tr-fn);
 }
 
 .nav-link:hover,
@@ -188,6 +190,7 @@ img {
   padding: 16px 32px;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -385,6 +388,7 @@ img {
   color: var(--light-slate);
   width: 100%;
   height: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-link:hover,
 .customers-link:focus {
@@ -490,6 +494,10 @@ img {
   padding: 12px 24px;
   border: 1px solid var(--color-border-button);
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-button:hover,
@@ -525,6 +533,7 @@ img {
   border: none;
   border-radius: 50%;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -543,6 +552,7 @@ img {
 
 .portfolio-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -553,14 +563,14 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-link:hover figcaption {
+.portfolio-link:hover p {
   translate: 0;
 }
 .casch-img-wrapper {
   position: relative;
   overflow: hidden;
 }
-.casch-img-wrapper figcaption {
+.casch-img-wrapper p {
   position: absolute;
   inset: 0;
   background-color: var(--color-button);
