--- a/css/styles.css
+++ b/css/styles.css
@@ -578,14 +578,21 @@ img {
   transition: translate var(--tr-drn) var(--tr-fn);
 }
 .figc-text {
+  position: absolute;
+  top: 0;
   color: var(--color-footer);
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.32px;
-  padding: 40px 32px 164px 32px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop {
   position: fixed;
