--- a/css/styles.css
+++ b/css/styles.css
@@ -573,24 +573,24 @@ img {
 }
 .casch-img-wrapper p {
   position: absolute;
-  inset: 0;
-  background-color: var(--color-button);
-  translate: 0 100%;
-  transition: translate var(--tr-drn) var(--tr-fn);
-}
-.figc-text {
   top: 0;
-  color: var(--color-footer);
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
   font-weight: 400;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: var(--color-footer);
   padding: 40px 32px;
+  background-color: #4d5ae5;
   height: 100%;
   width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.casch-img-wrapper:hover .figc-text,
+.casch-img-wrapper:focus .figc-text {
+  transform: translateY(0%);
+}
+
 .backdrop {
   position: fixed;
   top: 0;
