--- a/css/styles.css
+++ b/css/styles.css
@@ -608,7 +608,8 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.5;
+  opacity: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   pointer-events: all;
   background-color: rgba(46, 47, 66, 0.4);
   transition-property: opacity;
@@ -616,6 +617,11 @@ img {
   transition-timing-function: var(--tr-fn);
 }
 
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
 .close-btn {
   position: absolute;
   top: 24px;
@@ -624,25 +630,35 @@ img {
   height: 24px;
   background-color: #e7e9fc;
   border-radius: 50%;
-  border: 1px solid #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-btn:hover,
+.close-btn:focus {
+  background-color: #404bbf;
+  border: none;
 }
 
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  color: firebrick;
   width: 408px;
   min-height: 584px;
   border-radius: 4px;
   background: var(--DAIRY, #fcfcfc);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-  transform: transicion;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.x-icon {
+  x-icon
 }
