--- a/css/styles.css
+++ b/css/styles.css
@@ -608,13 +608,10 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   pointer-events: all;
   background-color: rgba(46, 47, 66, 0.4);
-  transition-property: opacity;
-  transition-duration: var(--tr-drn);
-  transition-timing-function: var(--tr-fn);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
@@ -660,5 +657,10 @@ img {
 }
 
 .x-icon {
-  x-icon
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.x.icon:hover,
+.x-icon:focus {
+  fill: #ffffff;
 }
