--- a/css/styles.css
+++ b/css/styles.css
@@ -658,9 +658,10 @@ img {
 
 .x-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #2e2f42;
 }
 
-.x.icon:hover,
+.x-icon:hover,
 .x-icon:focus {
   fill: #ffffff;
 }
