--- a/css/styles.css
+++ b/css/styles.css
@@ -95,31 +95,27 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:nth-child(1) {
-  position: relative;
-  color: var(--color-button-on);
-}
-
 .nav-link:hover,
 .nav-link:focus {
   color: var(--color-button-on);
 }
 
-.nav-link::after {
+.studio-underline,
+.portfolio-underline {
+  position: relative;
+  color: #404bbf;
+}
+
+.studio-underline::after,
+.portfolio-underline::after {
   content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
+  width: 100%;
   height: 4px;
-  background-color: var(--color-button-on);
+  background-color: #404bbf;
   border-radius: 2px;
-}
-.nav-link::after {
-  display: none;
-  margin-bottom: 20px;
-}
-.nav-link:hover::after {
-  display: block;
 }
 
 .address {
@@ -614,12 +610,34 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  background: #fcfcfc;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.x-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.x-icon:hover,
+.x-icon:focus {
+  fill: #ffffff;
+}
+
 .close-btn {
   position: absolute;
   top: 24px;
@@ -641,28 +659,5 @@ img {
 .close-btn:focus {
   background-color: #404bbf;
   border: none;
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 408px;
-  min-height: 584px;
-  border-radius: 4px;
-  background: var(--DAIRY, #fcfcfc);
-  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.x-icon {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: #2e2f42;
-}
-
-.x-icon:hover,
-.x-icon:focus {
   fill: #ffffff;
 }
