--- a/css/styles.css
+++ b/css/styles.css
@@ -655,7 +655,8 @@ img {
 
 .x-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: currentColor;
+  width: 100%;
+  height: 100%;
 }
 
 .x-icon:hover,
