--- a/css/styles.css
+++ b/css/styles.css
@@ -657,9 +657,12 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 100%;
+  fill: #2e2f42;
 }
 
 .x-icon:hover,
 .x-icon:focus {
+  background-color: #404bbf;
+  border: none;
   fill: #ffffff;
 }
