--- a/css/styles.css
+++ b/css/styles.css
@@ -650,19 +650,17 @@ img {
 .close-btn:focus {
   background-color: #404bbf;
   border: none;
-  fill: #ffffff;
 }
 
 .x-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 100%;
-  fill: #2e2f42;
+  fill: #e7e9fc;
 }
 
 .x-icon:hover,
 .x-icon:focus {
-  background-color: #404bbf;
+  fill: #404bbf;
   border: none;
-  fill: #ffffff;
 }
